# callbro

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: build.yml
server/: Cargo.toml
server/src/: main.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.admin.conf.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs
