[package]
name = "callbro"
version = "0.3.3"
description = "callbro - office intercom for the LAN"
authors = ["Faz Capital"]
edition = "2021"

[lib]
name = "callbro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

# macOS: opt out of App Nap so the app keeps receiving calls while hidden in the tray.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }

[profile.release]
# NOTE: do not enable `strip` — it corrupts the macOS code signature.
lto = true
codegen-units = 1
